--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>------Welcome to Scientific Day!!!!!----</title>
+    <title>------Welcome to Scientifics Day!!!!!----</title>
     <!-- 
 
 Get Ready Template
